gradeTest/xnTBi9qAPLbX467aY5/results/errors.txt
<h3>Errors</h3><br><p>null<br>Creating Temporary Folder
Copying StudentFiles Contents
Creating container
Writing Differences
Writing Log Files
Moving Files to Completed
<br>AutoGrader.java:125: error: cannot find symbol
			studentAnswer[i] = SkeletonForStudents.tempConvert(modes[i], temps[i]);
			                   ^
  symbol:   variable SkeletonForStudents
  location: class AutoGrader
1 error
mySolution.java:2: error: class SkeletonForStudents is public, should be declared in a file named SkeletonForStudents.java
public class SkeletonForStudents {
       ^
1 error
Error: Could not find or load main class AutoGrader
AutoGrader.java:125: error: cannot find symbol
			studentAnswer[i] = SkeletonForStudents.tempConvert(modes[i], temps[i]);
			                   ^
  symbol:   variable SkeletonForStudents
  location: class AutoGrader
1 error
mySolution.java:2: error: class SkeletonForStudents is public, should be declared in a file named SkeletonForStudents.java
public class SkeletonForStudents {
       ^
1 error
Error: Could not find or load main class AutoGrader
</p>